Summary page flicker fixes

--- a/src/frontend/src/styles.scss
+++ b/src/frontend/src/styles.scss
@@ -159,3 +159,7 @@ body {
 * {
     user-select: none;
 }
+
+.hidden {
+    display: none !important;
+}
